--- a/yes.css
+++ b/yes.css
@@ -28,7 +28,7 @@ body {
     color: white;
     font-family: 'Nunito';
     font-size: 2rem;
-    text-align: end;
+    /* text-align: end; */
 
 }
 
@@ -62,5 +62,6 @@ body {
     position: absolute;
     right: 1rem;
     bottom: 1rem;
+    text-align: end;
 
 }
